Rename .jumbotron into .mission, add content to .mission, finish header and .mission styling

--- a/index.html
+++ b/index.html
@@ -25,9 +25,13 @@
 
     <!-- Main content -->
     <div class="main">
-      <div class="jumbotron">
 
-      </div> <!-- End of jumbotron -->
+      <div class="mission">
+        <div>
+          <h2>Our Mission</h2>
+          <p>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</p>
+        </div>
+      </div> <!-- End of mission -->
 
       <div class="products">
 
@@ -36,6 +40,7 @@
       <div class="locations">
 
       </div> <!-- End of locations -->
+
     </div> <!-- End of Main content -->
 
     <!-- Footer content -->
