--- a/index.html
+++ b/index.html
@@ -35,6 +35,44 @@
 
       <div class="products">
 
+        <div class="row">
+
+          <div class="product" id="productOne">
+            <div class="image-content">
+            </div>
+            <p>Fall Berry Blitz Tea</p>
+          </div>
+
+          <div class="product" id="productTwo">
+            <div class="image-content">
+            </div>
+            <p>Spiced Rum Tea</p>
+          </div>
+
+          <div class="product" id="productThree">
+            <div class="image-content">
+            </div>
+            <p>Seasonal Donuts</p>
+          </div>
+
+        </div>
+
+        <div class="row">
+
+          <div class="product" id="productFour">
+            <div class="image-content">
+            </div>
+            <p>Myrtle Ave Tea</p>
+          </div>
+
+          <div class="product" id="productFive">
+            <div class="image-content">
+            </div>
+            <p>Bedford Bizarre Tea</p>
+          </div>
+
+        </div>
+
       </div> <!-- End of products -->
 
       <div class="locations">
