Update styling according redline, add styling to products area

--- a/index.html
+++ b/index.html
@@ -29,30 +29,36 @@
       <div class="mission">
         <div>
           <h2>Our Mission</h2>
-          <p>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</p>
+          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
         </div>
       </div> <!-- End of mission -->
 
       <div class="products">
 
+        <div class="products-header">
+          <h2>Tea of the Month</h2>
+          <h4>What's Steeping at The Tea Cozy</h4>
+        </div>
+
         <div class="row">
 
           <div class="product" id="productOne">
-            <div class="image-content">
-            </div>
-            <p>Fall Berry Blitz Tea</p>
+            <div class="image-content"></div>
+            <h4>Fall Berry Blitz Tea</h4>
           </div>
+
+          <div class="space-between-product"></div>
 
           <div class="product" id="productTwo">
-            <div class="image-content">
-            </div>
-            <p>Spiced Rum Tea</p>
+            <div class="image-content"></div>
+            <h4>Spiced Rum Tea</h4>
           </div>
 
+          <div class="space-between-product"></div>
+
           <div class="product" id="productThree">
-            <div class="image-content">
-            </div>
-            <p>Seasonal Donuts</p>
+            <div class="image-content"></div>
+            <h4>Seasonal Donuts</h4>
           </div>
 
         </div>
@@ -60,15 +66,15 @@
         <div class="row">
 
           <div class="product" id="productFour">
-            <div class="image-content">
-            </div>
-            <p>Myrtle Ave Tea</p>
+            <div class="image-content"></div>
+            <h4>Myrtle Ave Tea</h4>
           </div>
 
+          <div class="space-between-product"></div>
+
           <div class="product" id="productFive">
-            <div class="image-content">
-            </div>
-            <p>Bedford Bizarre Tea</p>
+            <div class="image-content"></div>
+            <h4>Bedford Bizarre Tea</h4>
           </div>
 
         </div>
