Add content and styling for footer

--- a/index.html
+++ b/index.html
@@ -117,11 +117,13 @@
     <!-- Footer content -->
     <footer>
       <div class="address">
-
+        <h2>The Tea Cozy</h2>
+        <h5>contact@theteacozy.com</h5>
+        <h5>917-555-8904</h5>
       </div>
 
       <div class="copyright">
-        <p>copryright The Tea Cozy 2017</p>
+        <h5>copryright The Tea Cozy 2017</h5>
       </div>
     </footer>
 
