Consolidate flex properties of elements in classes .flexrow and .flexbox

--- a/index.html
+++ b/index.html
@@ -24,55 +24,53 @@
     </header>
 
     <!-- Main content -->
-    <div class="main">
+    <div class="flexbox main">
 
-      <div class="mission">
+      <div class="flexbox mission">
         <div>
           <h2>Our Mission</h2>
           <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
         </div>
       </div> <!-- End of mission -->
 
-      <div class="products">
+      <div class="flexbox products">
 
-        <div class="products-header">
-          <h2>Tea of the Month</h2>
-          <h4>What's Steeping at The Tea Cozy</h4>
-        </div>
+        <h2>Tea of the Month</h2>
+        <h4>What's Steeping at The Tea Cozy</h4>
 
-        <div class="row">
+        <div class="flexrow">
 
-          <div class="product" id="productOne">
+          <div class="flexbox product" id="productOne">
             <div class="image-content"></div>
             <h4>Fall Berry Blitz Tea</h4>
           </div>
 
           <div class="space-between-product"></div>
 
-          <div class="product" id="productTwo">
+          <div class="flexbox product" id="productTwo">
             <div class="image-content"></div>
             <h4>Spiced Rum Tea</h4>
           </div>
 
           <div class="space-between-product"></div>
 
-          <div class="product" id="productThree">
+          <div class="flexbox product" id="productThree">
             <div class="image-content"></div>
             <h4>Seasonal Donuts</h4>
           </div>
 
         </div>
 
-        <div class="row">
+        <div class="flexrow">
 
-          <div class="product" id="productFour">
+          <div class="flexbox product" id="productFour">
             <div class="image-content"></div>
             <h4>Myrtle Ave Tea</h4>
           </div>
 
           <div class="space-between-product"></div>
 
-          <div class="product" id="productFive">
+          <div class="flexbox product" id="productFive">
             <div class="image-content"></div>
             <h4>Bedford Bizarre Tea</h4>
           </div>
@@ -81,34 +79,34 @@
 
       </div> <!-- End of products -->
 
-      <div class="locations">
+      <div class="flexbox locations">
 
-        <div class="locations-header">
-          <h2>Locations</h2>
-        </div>
+        <h2>Locations</h2>
 
-        <div class="row">
-          <div class="location">
+        <div class="flexrow">
+
+          <div class="flexbox location">
             <h3>Downtown</h3>
             <p>384 West 4th St</p>
             <p>Suite 108</p>
             <p>Portland, Maine</p>
           </div>
 
-          <div class="location">
+          <div class="flexbox location">
             <h3>East Bayside</h3>
             <p>3433 Phisherman's Avenue</p>
             <p>(Northwest Corner)</p>
             <p>Portland, Maine</p>
           </div>
 
-          <div class="location">
+          <div class="flexbox location">
             <h3>Oakdale</h3>
             <p>515 Crescent Avenue</p>
             <p>Second Floor</p>
             <p>Portland, Maine</p>
           </div>
-        </div>
+
+        </div> <!-- End of flexrow -->
 
       </div> <!-- End of locations -->
 
@@ -116,7 +114,8 @@
 
     <!-- Footer content -->
     <footer>
-      <div class="address">
+
+      <div class="flexbox address">
         <h2>The Tea Cozy</h2>
         <h5>contact@theteacozy.com</h5>
         <h5>917-555-8904</h5>
@@ -125,6 +124,7 @@
       <div class="copyright">
         <h5>copryright The Tea Cozy 2017</h5>
       </div>
+
     </footer>
 
   </body>
