Add anchor links to the menu

--- a/index.html
+++ b/index.html
@@ -16,24 +16,29 @@
       <!-- Navigation section -->
       <div>
         <nav>
-          <span><a href="#">Mission</a></span>
-          <span><a href="#">Featured Tea</a></span>
-          <span><a href="#">Locations</a></span>
+          <span><a href="#mission">Mission</a></span>
+          <span><a href="#products">Featured Tea</a></span>
+          <span><a href="#locations">Locations</a></span>
         </nav>
       </div>
     </header>
 
     <!-- Main content -->
-    <div class="flexbox main">
 
-      <div class="flexbox mission">
+    <div class="main flexbox">
+
+      <span class="anchor" id="mission"></span>
+
+      <div class="mission flexbox">
         <div>
           <h2>Our Mission</h2>
           <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
         </div>
       </div> <!-- End of mission -->
 
-      <div class="flexbox products">
+      <span class="anchor" id="products"></span>
+
+      <div class="products flexbox">
 
         <h2>Tea of the Month</h2>
         <h4>What's Steeping at The Tea Cozy</h4>
@@ -79,7 +84,9 @@
 
       </div> <!-- End of products -->
 
-      <div class="flexbox locations">
+      <span class="anchor" id="locations"></span>
+
+      <div class="locations flexbox">
 
         <h2>Locations</h2>
 
